--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,9 @@ Authors@R:
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
+Imports:
+    dplyr (>= 0.5.0),
+    stats
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
