add helper functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,9 @@ Authors@R:
 Description: What the package does (one paragraph).
 Imports:
     dplyr (>= 0.5.0),
-    stats
+    stats,
+    bbr,
+    stringr
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
