defineRows and checkTransforms

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,6 @@ export(getPanelName)
 export(getValueSE)
 export(getpCV)
 export(getpRSE)
+importFrom(dplyr,filter)
+importFrom(dplyr,select)
+importFrom(stringr,str_detect)
