--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,16 @@ export(backTrans_logit)
 export(define_param_table)
 export(formatGreekNames)
 export(formatValues)
+export(get90CI)
 export(get95CI)
 export(getPanelName)
 export(getValueSE)
 export(getpCV)
 export(getpRSE)
 importFrom(dplyr,filter)
+importFrom(dplyr,inner_join)
 importFrom(dplyr,select)
+importFrom(purrr,map)
+importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_split)
