getPanelName documentation/tests/requirements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,9 @@ export(getValueSE)
 export(getpCV)
 export(getpRSE)
 importFrom(dplyr,filter)
+importFrom(dplyr,innner_join)
 importFrom(dplyr,select)
+importFrom(purrr,map)
+importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_split)
