--- a/inst/validation/mrgparamtab-requirements.yaml
+++ b/inst/validation/mrgparamtab-requirements.yaml
@@ -30,3 +30,8 @@ DRO-R002:
   description: defineRows creates variables with true/false values depending on the type of parameter on each row
   tests:
   - MPT-DRO-002
+DPT-R001:
+  description: define_param_table combines model output parameter estimates with information in parameter key
+  tests:
+  -MPT-DPT-001
+  -MPT-DPT-002
