--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,4 @@ export(getPanelName)
 export(getValueSE)
 export(getpCV)
 export(getpRSE)
-importFrom(dplyr,filter)
-importFrom(dplyr,select)
-importFrom(stringr,str_detect)
+export(param_key)
