add setsig function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(formatValues)
 export(get90CI)
 export(get95CI)
 export(getPanelName)
+export(getSD_logitO)
 export(getValueSE)
 export(getpCV)
 export(getpRSE)
+export(setsig)
