--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,7 @@ export(backTrans_log)
 export(backTrans_logit)
 export(define_param_table)
 export(formatGreekNames)
-export(formatValues)
-export(get90CI)
-export(get95CI)
+export(getCI)
 export(getPanelName)
 export(getSD_logitO)
 export(getValueSE)
