--- a/inst/validation/mrgparamtab-requirements.yaml
+++ b/inst/validation/mrgparamtab-requirements.yaml
@@ -67,15 +67,16 @@ GPN-R006:
   tests:
   - MPT-GPN-006
 DPT-R001:
-  description: define_param_table combines model output parameter estimates with information in parameter key
+  description: defineParamTable combines model output parameter estimates with information in parameter key
   tests:
   - MPT-DPT-001
   - MPT-DPT-002
 DPT-R002:
-  description: define_param_table allows a variety of input types for the parameter estimates and parameter key
+  description: defineParamTable allows a variety of input types for the parameter estimates and parameter key
   tests:
   - MPT-DPT-003
   - MPT-DPT-004
+  - MPT-DPT-005
 BQU-R001:
   description: boot_quantiles calculates quartiles when using bootstrap estimates
   tests:
