description file and pipe fix

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,31 @@ Package: mrgparamtab
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    c(person(given = "Seth",
+             family = "Green",
+             role = c("aut"),
+             email = "sethg@metrumrg.com"),
+      person(given = "Katherine",
+             family = "Kay",
+             role = c("aut"),
+             email = "katherinek@metrumrg.com"),
+      person(given = "Michael",
+             family = "McDermott",
+             role = c("aut"),
+             email = "michaelmg@metrumrg.com"),
+      person(given = "Grace",
+             family = "O'Brien",
+             role = c("aut"),
+             email = "graceo@metrumrg.com"),
+Description: `mrgparamtab` is a library written in R that generates clear,
+well-formatted parameter tables to report NONMEM® model results.
 Imports:
-    dplyr (>= 0.5.0),
-    stats,
     bbr,
+    dplyr (>= 0.5.0),
+    magrittr,
+    stats,
     stringr
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: `use_mit_license()`
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
