updating tests + docs

--- a/inst/validation/mrgparamtab-requirements.yaml
+++ b/inst/validation/mrgparamtab-requirements.yaml
@@ -124,3 +124,20 @@ RPC-001:
   description: removePunc removes paranetheses from string vector
   tests:
   -MPT-RPC-001
+DBT-R001:
+  description: defineBootTable combines boot parameter estimates with information in parameter key
+  tests:
+  - MPT-DBT-001
+  - MPT-DBT-002
+DBT-R002:
+  description: defineBootTable allows a variety of input types for the boot estimates, parameter estimates, and parameter key
+  tests:
+  - MPT-DBT-003
+  - MPT-DBT-004
+  - MPT-DBT-005
+  - MPT-DBT-006
+FBT-R001:
+  description: formatBootTable creates final table with specified column outputs
+  tests:
+  -MPT-FPT-001
+  -MPT-FPT-002
