--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -3,16 +3,29 @@ title: mrgparamtab
 template:
   params:
     bootswatch: flatly
+navbar:
+  type: inverse
+  right:
+  - icon: fa-github fa-lg
+    href: https://ghe.metrumrg.com/software-incubator/mrgparamtab
 reference:
   - title: Create parameter key
     desc: Requirements for parameter key
     contents:
     - param_key
   - title: Define parameter table
-    desc: Combines model output parameter estimates with information in parameter key. Performs some formatting of this combined data.frame.
+    desc: Combine model output parameter estimates with information in parameter key. Perform some formatting of this combined data.frame.
     contents:
     - defineParamTable
   - title: Format parameter table
     desc: Estimate values and output selected columns to be shown in the parameter table.
     contents:
     - formatParamTable
+  - title: Define boot parameter table
+    desc: Combine bootstrap estimates with non-bootstrap estimates and parameter key. Perform some formatting of this combined data.frame.
+    contents:
+    - defineBootTable
+  - title: Format boot parameter table
+    desc: Format bootstrap parameter estimate values and output selected columns to be shown in the bootstrap parameter table.
+    contents:
+    - formatBootTable
