--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: pmparams
 Title: R package for parameter tables
-Version: 0.0.0.9000
+Version: 0.0.0.9001
 Authors@R: 
       c(person(given = "Katherine",
              family = "Kay",
-             role = c("crea"),
+             role = c("cre"),
              email = "katherinek@metrumrg.com"),
       person(given = "Michael",
              family = "McDermott",
@@ -31,7 +31,7 @@ Imports:
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 Suggests: 
     testthat (>= 3.0.0),
     knitr
