Small updates for mpn.scorecard:
* Adding URL and BugReports fields to DESCRIPTION
* Updating NEWS.md dev entry to reflect current version (this will be updated to 0.1.0 in the real release branch soon anyway)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ Authors@R:
              role = c("aut"),
              email = "graceo@metrumrg.com"))
 Description: `pmparams` is a library written in R that generates clear, well-formatted parameter tables to report NONMEM model results.
+URL: https://github.com/metrumresearchgroup/pmparams
+BugReports: https://github.com/metrumresearchgroup/pmparams/issues
 Imports:
     bbr,
     dplyr (>= 0.5.0),
