--- a/pkgr.yml
+++ b/pkgr.yml
@@ -6,10 +6,13 @@ Descriptions:
 Packages:
   - devtools
   - pkgdown
+  - bbr.bayes
+  - tidybayes
 
 Repos:
   - CRAN: https://cran.rstudio.com
   - bbr: https://s3.amazonaws.com/mpn.metworx.dev/releases/bbr/latest_tag
+  - bbr.bayes: https://s3.amazonaws.com/mpn.metworx.dev/releases/bbr.bayes/0.1.1
   - pmtables: https://s3.amazonaws.com/mpn.metworx.dev/releases/pmtables/latest_tag
 
 Lockfile:
