--- a/inst/model/stan/mod0/mod0-param.yaml
+++ b/inst/model/stan/mod0/mod0-param.yaml
@@ -1,20 +1,36 @@
-EMAX:
+Emax:
   abb: $\theta_3$
-  desc: Maximal tooth length
-  panel: x
+  desc: Maximal FXa inhibition
   trans: none
-ED50:
-  abb: $\theta_2$
-  desc: Dose yielding half of the maximal effect
-  panel: y
+  panel: struct
+tv_ec50:
+  abb: $\exp(\theta_2)$
+  desc: Concentration yielding half of the maximal effect
   trans: none
-E0:
+  panel: struct
+tv_e0:
   abb: $\theta_1$
-  desc: Tooth length at a dose of 0
-  panel: z
+  desc: Baseline FXa inhibition
   trans: none
-SIGMA:
+  panel: struct
+Sigma:
+  name: sigma
   abb: $\sigma$
   desc: Residual standard deviation
-  panel: zz
   trans: none
+  panel: RUV
+omega_e0:
+  abb: $\omega_1$
+  desc: IIV standard deviation for baseline FXa inhibition
+  trans: none
+  panel: struct
+omega_log_ec50:
+  abb: $\omega_2$
+  desc: IIV standard deviation for EC50
+  trans: none
+  panel: struct
+gamma:
+   abb: $\gamma$
+   desc: Hill parameter
+   trans: none
+   panel: struct
