--- a/inst/model/nonmem/pk-parameter-key-new.yaml
+++ b/inst/model/nonmem/pk-parameter-key-new.yaml
@@ -28,6 +28,7 @@
 ##'                     - e.g. "logitOmSD ~ THETA3"
 ##'        "addErr"     - for additive error terms (coded using SIGMA in $ERROR) - returns est.+ SD
 ##'        "propErr"    - for proportional error terms (coded using SIGMA in $ERROR) - returns est.+CV%
+##'        "addErrLogDV" - for additive error log terms (coded using SIGMA in $ERROR) - returns est.+CV%
 #
 # paramKey = tribble(
 #   ~name, ~abb, ~desc, ~panel, ~trans,
