--- a/.drone.yml
+++ b/.drone.yml
@@ -17,6 +17,23 @@ steps:
   - name: docker.sock
     path: /var/run/docker.sock
 
+- name: Install bbi
+  pull: never
+  image: 906087756158.dkr.ecr.us-east-1.amazonaws.com/r-dev-ci-mpn-4.1:latest
+  commands:
+    - |
+      curl -fSsL "$BBI_URL/$BBI_VERSION/bbi_linux_amd64.tar.gz" |
+        tar -z --extract --to-stdout >/ephemeral/bbi
+    - chmod +x /ephemeral/bbi
+    - /ephemeral/bbi version
+
+  environment:
+    BBI_VERSION: v3.3.0
+    BBI_URL: https://github.com/metrumresearchgroup/bbi/releases/download
+  volumes:
+  - name: cache
+    path: /ephemeral
+
 - name: "Check package: R 4.1"
   pull: never
   image: 906087756158.dkr.ecr.us-east-1.amazonaws.com/r-dev-ci-mpn-4.1:cran-latest
@@ -26,6 +43,7 @@ steps:
   - R -s -e 'devtools::check(env_vars = c("NOT_CRAN" = "true"))'
   environment:
     USER: drone
+    BBI_EXE_PATH: /ephemeral/bbi
   volumes:
   - name: cache
     path: /ephemeral
@@ -60,6 +78,23 @@ steps:
   volumes:
   - name: docker.sock
     path: /var/run/docker.sock
+
+- name: Install bbi
+  pull: never
+  image: 906087756158.dkr.ecr.us-east-1.amazonaws.com/r-dev-ci-mpn-4.1:latest
+  commands:
+    - |
+      curl -fSsL "$BBI_URL/$BBI_VERSION/bbi_linux_amd64.tar.gz" |
+        tar -z --extract --to-stdout >/ephemeral/bbi
+    - chmod +x /ephemeral/bbi
+    - /ephemeral/bbi version
+
+  environment:
+    BBI_VERSION: v3.3.0
+    BBI_URL: https://github.com/metrumresearchgroup/bbi/releases/download
+  volumes:
+  - name: cache
+    path: /ephemeral
 
 - name: Build package
   pull: never
