update news and tests from rebase

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,10 @@ Authors@R:
              family = "McDermott",
              role = c("aut"),
              email = "michaelmg@metrumrg.com"),
+      person(given = "Eric",
+             family = "Anderson",
+             role = c("aut"),
+             email = "andersone@metrumrg.com"),
       person(given = "Grace",
              family = "O'Brien",
              role = c("aut"),
