--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(define_boot_table)
 export(define_param_table)
 export(format_boot_table)
 export(format_param_table)
+export(get_equations)
 export(make_pmtable)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
