rename get_equations --> param_notes. Fix spelling errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export(define_boot_table)
 export(define_param_table)
 export(format_boot_table)
 export(format_param_table)
-export(get_equations)
 export(make_pmtable)
+export(param_notes)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
