--- a/pkgdown.yml
+++ b/pkgdown.yml
@@ -1,6 +1,8 @@
 pandoc: 2.17.1.1
-pkgdown: 2.0.7
+pkgdown: 2.0.9
 pkgdown_sha: ~
-articles: {}
-last_built: 2023-10-06T14:28Z
+articles:
+  getting-started: getting-started.html
+  making-bootstrap-parameter-tables: making-bootstrap-parameter-tables.html
+last_built: 2024-05-22T14:10Z
 
