make_boot_pmtable function now works
 - update vignettes, mainly the bootstrap one

 - Additional vignette changes, test updates, and bbr handling is still needed

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,9 +37,9 @@ Imports:
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Suggests: 
-    bbr,
+    bbr (>= 1.11.0),
     testthat (>= 3.0.0),
     knitr
 Config/testthat/edition: 3
