--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,11 @@ Authors@R:
       person(given = "Grace",
              family = "O'Brien",
              role = c("aut"),
-             email = "graceo@metrumrg.com")) 
+             email = "graceo@metrumrg.com")
+      person(given = "Kyle",
+             family = "Barrett",
+             role = c("aut"),
+             email = "barrettk@metrumrg.com")) 
 Description: `pmparams` is a library written in R that generates clear, well-formatted parameter tables to report NONMEM model results.
 URL: https://metrumresearchgroup.github.io/pmparams/, https://github.com/metrumresearchgroup/pmparams
 BugReports: https://github.com/metrumresearchgroup/pmparams/issues
