--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Authors@R:
       person(given = "Grace",
              family = "O'Brien",
              role = c("aut"),
-             email = "graceo@metrumrg.com")
+             email = "graceo@metrumrg.com"),
       person(given = "Kyle",
              family = "Barrett",
              role = c("aut"),
@@ -25,8 +25,11 @@ Authors@R:
 Description: `pmparams` is a library written in R that generates clear, well-formatted parameter tables to report NONMEM model results.
 URL: https://metrumresearchgroup.github.io/pmparams/, https://github.com/metrumresearchgroup/pmparams
 BugReports: https://github.com/metrumresearchgroup/pmparams/issues
+Depends:
+    R (>= 3.5)
 Imports:
-    dplyr (>= 0.5.0),
+    checkmate,
+    dplyr (>= 1.0.0),
     magrittr,
     pmtables,
     rlang,
@@ -34,18 +37,24 @@ Imports:
     glue,
     logitnorm,
     purrr,
+    tibble,
     tidyr,
-    yaml,
+    tidyselect (>= 1.0.0),
     readr,
-    withr
+    utils,
+    yaml
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Suggests: 
     bbr (>= 1.11.0),
+    devtools,
+    knitr,
+    magick,
+    pdftools,
     testthat (>= 3.0.0),
-    knitr
+    withr
 Config/testthat/edition: 3
 VignetteBuilder: 
     knitr
