--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,5 @@ export(param_notes)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
+importFrom(tidyselect,all_of)
 importFrom(tidyselect,any_of)
