--- a/inst/model/nonmem/102/.gitignore
+++ b/inst/model/nonmem/102/.gitignore
@@ -2,6 +2,7 @@ background.set
 compile.lnk
 FCON
 FDATA
+FDATA.csv
 FMSG
 FREPORT
 FSIZES
@@ -61,3 +62,4 @@ trashfile.xxx
 102_ETAS.msf
 102_RMAT.msf
 102_SMAT.msf
+WK_[0-9]*
