--- a/inst/model/nonmem/102/bbi_config.json
+++ b/inst/model/nonmem/102/bbi_config.json
@@ -1,22 +1,25 @@
 {
-    "bbi_version": "v3.1.1",
+    "bbi_version": "v3.3.0",
     "model_name": "102.ctl",
     "original_model": "102.ctl",
-    "model_path": "/data/home/sethg/example-projects/bbr-nonmem-poppk-foce/model/pk/102/102.ctl",
-    "data_path": "../../../data/derived/analysis3.csv",
+    "model_path": "/data/Projects/package_dev/pmparams/inst/model/nonmem/102.ctl",
+    "data_path": "../../../extdata/derived/analysis3.csv",
     "data_md5": "84a596d0fd81c2d187a64bc62d96b433",
-    "model_md5": "344c0362021a7a29553d4bd6994d0f3f",
+    "model_md5": "dc2cd582d69b732caa07ae439ba25cf3",
     "model_filename": "102",
     "model_extension": "ctl",
-    "original_path": "/data/home/sethg/example-projects/bbr-nonmem-poppk-foce/model/pk/102",
-    "output_dir": "/data/home/sethg/example-projects/bbr-nonmem-poppk-foce/model/pk/102",
+    "original_path": "/data/Projects/package_dev/pmparams/inst/model/nonmem",
+    "output_dir": "/data/Projects/package_dev/pmparams/inst/model/nonmem/102",
     "configuration": {
+        "overwrite": true,
         "clean_lvl": 1,
         "git": true,
-        "bbi_binary": "/data/apps/bbi",
+        "save_config": true,
         "output_dir": "{{ .Name }}",
-        "threads": 1,
-        "local": {},
+        "threads": 2,
+        "local": {
+            "create_child_dirs": true
+        },
         "nonmem": {
             "nm73gf": {
                 "home": "/opt/NONMEM/nm73gf",
@@ -30,17 +33,21 @@
             "nm74gf": {
                 "home": "/opt/NONMEM/nm74gf",
                 "executable": "nmfe74",
-                "nmqual": true,
-                "default": true
+                "nmqual": true
             },
             "nm74gf_nmfe": {
                 "home": "/opt/NONMEM/nm74gf_nmfe",
                 "executable": "nmfe74"
+            },
+            "nm75": {
+                "home": "/opt/NONMEM/nm75",
+                "executable": "nmfe75",
+                "default": true
             }
         },
         "parallel": false,
         "nmfe_options": {
-            "maxlim": 100
+            "maxlim": 2
         },
         "mpi_exec_path": "/usr/local/mpich3/bin/mpiexec",
         "parallel_timeout": 2147483647
