--- a/inst/model/nonmem/106/.gitignore
+++ b/inst/model/nonmem/106/.gitignore
@@ -2,6 +2,7 @@ background.set
 compile.lnk
 FCON
 FDATA
+FDATA.csv
 FMSG
 FREPORT
 FSIZES
@@ -61,3 +62,4 @@ trashfile.xxx
 106_ETAS.msf
 106_RMAT.msf
 106_SMAT.msf
+WK_[0-9]*
