--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -27,6 +27,7 @@ reference:
     desc: Generate complete parameter tables ready for rendering using `pmtables`.
     contents:
     - make_pmtable
+    - make_boot_pmtable
   - title: Get generic parameter table footnotes
     desc: Generate data frame of generic footnote equations to append to parameter tables.
     contents:
