Update wording to include THEAT for addErrLogDV transform. Add test

--- a/inst/model/nonmem/pk-parameter-key-both.yaml
+++ b/inst/model/nonmem/pk-parameter-key-both.yaml
@@ -28,7 +28,7 @@
 ##'                     - e.g. "logitOmSD ~ THETA3"
 ##'        "addErr"     - for additive error terms (coded using SIGMA in $ERROR) - returns est.+ SD
 ##'        "propErr"    - for proportional error terms (coded using SIGMA in $ERROR) - returns est.+CV%
-##'        "addErrLogDV" - for additive error when DV modeled in log domain (still coded using SIGMA in $ERROR) - returns est.+CV%
+##'        "addErrLogDV" - for an additive error term on log-transformed data (coded using THETA or SIGMA in $ERROR) - returns est.+CV%
 #
 # paramKey = tribble(
 #   ~name, ~abb, ~desc, ~panel, ~trans,
