CI: update tested R versions
 - run with the two most recent R versions on the most recent Metworx (4.3.3 and 4.4.2)

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,7 +26,9 @@ jobs:
             # Latest magick requires R 4.1.
             magick_pkg: 'url::https://mpn.metworx.com/snapshots/stable/2025-02-26/src/contrib/magick_2.8.5.tar.gz'
           - os: ubuntu-22.04
-            r: 4.3.1
+            r: 4.3.3
+          - os: ubuntu-22.04
+            r: 4.4.2
           - os: ubuntu-latest
             r: release
     env:
